--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,6 +1,11 @@
-runtime: java
-env: flex
- 
-handlers:
-  - url: /.*
-    script: this field is required, but ignored
+runtime: java11
+#env: flex
+
+#handlers:
+#- url: /.*
+#  script: this field is required, but ignored
+#automatic_scaling:
+#  min_num_instances: 1
+#  max_num_instances: 7
+instance_class: F4
+
